@@ -1,0 +1,13 @@
+{
+    IBClasses = (
+        {CLASS = FirstResponder; LANGUAGE = ObjC; SUPERCLASS = NSObject; }, 
+        {
+            ACTIONS = {onCancel = id; onSend = id; }; 
+            CLASS = PasteSheet; 
+            LANGUAGE = ObjC; 
+            OUTLETS = {sendButton = id; sheet = id; text = id; }; 
+            SUPERCLASS = NSObject; 
+        }
+    ); 
+    IBVersion = 1; 
+}
